--- a/ListOfDeal/App.config
+++ b/ListOfDeal/App.config
@@ -18,6 +18,7 @@
   <add name="ListOfDealBaseEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDREYHP;initial catalog=ListOfDealBase;persist security info=True;user id=sa;password=dx;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
     <add name="ListOfDealBaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kozhevnikov-w10;initial catalog=ListOfDealBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 	  <add name="KOZHEVNIKOV-NBXListOfDealBase" connectionString="XpoProvider=MSSqlServer;data source=KOZHEVNIKOV-NBX;integrated security=SSPI;initial catalog=ListOfDealBaseTest" />
+	  <add name="KOZHEVNIKOV-NBXListOfDealBaseMy" connectionString="XpoProvider=MySql;server=194.87.111.186;user id=myTestUser; password=7NTWmqC1; database=ListOfDealMy;persist security info=true;CharSet=utf8;" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -36,4 +37,20 @@
       </setting>
     </DXThemeManager>
   </userSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.1" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.1" newVersion="4.0.1.2" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
