--- a/ConsoleApp1/ConsoleApp1/App.config
+++ b/ConsoleApp1/ConsoleApp1/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <connectionStrings>
         <add name="KOZHEVNIKOV-NBXListOfDealBase" connectionString="XpoProvider=MSSqlServer;data source=KOZHEVNIKOV-NBX;integrated security=SSPI;initial catalog=ListOfDealBase" />
-        <add name="194.87.111.186ListOfDealMy" connectionString="XpoProvider=MySql;server=194.87.111.186;user id=myTestUser; password=7NTWmqC1; database=ListOfDealMy;persist security info=true;CharSet=utf8;" />
+        <add name="194.87.111.186ListOfDealMy" connectionString="XpoProvider=MySql;server=194.87.111.186;user id=myTestUser; password=7NTWmqC1; database=ListOfDealMy;persist security info=true;CharSet=utf8mb4;" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
