--- a/ListOfDeal/App.config
+++ b/ListOfDeal/App.config
@@ -18,7 +18,7 @@
   <add name="ListOfDealBaseEntities2" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDREYHP;initial catalog=ListOfDealBase;persist security info=True;user id=sa;password=dx;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ListOfDealBaseEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kozhevnikov-w10;initial catalog=ListOfDealBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	  <add name="KOZHEVNIKOV-NBXListOfDealBase" connectionString="XpoProvider=MSSqlServer;data source=KOZHEVNIKOV-NBX;integrated security=SSPI;initial catalog=ListOfDealBaseTest" />
-	  <add name="KOZHEVNIKOV-NBXListOfDealBaseMy" connectionString="XpoProvider=MySql;server=194.87.111.186;user id=lodUser; password=tp8sKDYGlxDMY0Il7l; database=ListOfDealMy;persist security info=true;CharSet=utf8;" />
+	  <add name="KOZHEVNIKOV-NBXListOfDealBaseMy" connectionString="XpoProvider=MySql;server=194.87.111.186;user id=; password=; database=ListOfDealMy;persist security info=true;CharSet=utf8;" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
